# pp-auth

./: .hgignore  .project  .pydevproject  README.rst  setup.cfg  setup.py
docs/: Makefile  index.rst
pp/auth/: __init__.py  apiaccesstoken.py  authenticators.py  middleware.py  pwtools.py  user.py
pp/auth/orm/: user_table.py
pp/auth/plugins/: latchpony.py  plain.py  sql.py  userservice.py  userservice_mongobackend.py
pp/auth/plugins/sql/: __init__.py  user.py
pp/auth/plugins/sql/orm/: user_table.py
pp/auth/plugins/sql/tests/: test_user.py
pp/auth/plugins/tests/: test_plain.py
pp/auth/scripts/: main.py
pp/auth/tests/: test_apiaccesstoken.py  test_middleware.py  test_pwtools.py  test_user.py
