[metadata]
name = pp-auth
version = 1.0.2
description =  Authorization and Authentication modules
author =  Edward Easton, Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords =

classifiers =
    Topic :: Software Development :: Libraries

# pyparsing 1.5.7 because pyparsing 2.0.0 requires python 3.x
install_requires =
    mock
    passlib
    pyparsing==1.5.7
    pp-db
    repoze.who==1.0.19
    repoze.what==1.0.9
    repoze.what.plugins.ini==0.2.2

setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest-cov

console_scripts =

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = .hg *.egg build dist
